# brendbot

./: .env.example  .gitignore  CLEANUP_LOG.md  ENGAGEMENT.md  FUSED-CORE.md  GROUP_SOUL.md  README.md  SOUL.md  engagement.yaml  pyproject.toml  setup.sh
brendbot/: FUSED_CORE_SETUP.md  classifier.py  classifier_cache.py  classifier_pool.py  config.py  content_gate.py  discord.py  embedding_model.py  episodes.py  feedback.py  fused_core_loader.py  main.py  obs.py  pregate.py  runtime_events.py  session.py  session_constants.py  session_gate.py  session_handler.py  signatures.py  user_registry.py
brendbot/agent_core/: __init__.py  budgets.py  complexity.py  solver.py  verifier.py
brendbot/composition/: __init__.py  abc_grammar.py  music21_layer.py  pipeline.py  style_library.py
brendbot/knowledge/: BUILDSCI.json  GOVERNANCE.json  IMAGEGEN.json  LOGIC.json  MANIFEST.json  PERSONALITY.json  STATS.json  SYSTEMS.json  knowledge.db  migrate_to_sqlite.py  validate.py
brendbot/knowledge/envelope/data/: ci_materials.csv  doors.csv  floors.csv  foundations.csv  (+7 more)
brendbot/knowledge/music_styles/: ambient.json  dnb.json  hardstyle.json  hiphop.json  irish_trad.json  jazz.json  jpop.json  lofi.json  trance.json
docs/: content-gate.md
scripts/: calc  cheddy-memorial  compose-song  export-training-data  generate-image  kb-query  migrate-imagegen  migrate-memory  react-discord  send-discord
scripts/migrations/: migrate-drop-dead-modules  migrate-imagegen  migrate-memory  migrate-punishment  migrate-user-registry  migrate_episodes.py  migrate_to_sqlite.py  validate_knowledge.py
tests/: conftest.py  test_abc_grammar.py  test_admin_bypass.py  test_cache_metrics.py  test_classifier.py  test_composition_pipeline.py  test_content_gate.py  test_engagement.py  test_episodes.py  test_feedback.py  test_followup_signal.py  test_friend_tier_classification.py  test_housekeeping_inject.py  test_image_prompt_log.py  test_load_score.py  test_long_turn_wiring.py  test_music21_layer.py  test_obs.py  test_obs_integration.py  test_phantom_discriminator.py  test_pregate.py  test_runtime_events.py  test_session_init.py  test_signatures.py  test_sqlite_concurrency.py  test_style_library.py  test_task_request_heuristic.py  test_tone_emotes.py
tests/agent_core/: test_budgets.py  test_complexity.py  test_solver.py  test_verifier.py
