[project]
name = "brendbot"
version = "0.1.0"
description = "A Claude-powered Discord bot in ~300 lines"
requires-python = ">=3.12"
dependencies = [
  "claude-agent-sdk>=0.1.0",
  "discord.py>=2.4",
  "httpx>=0.28",
  "python-dotenv>=1.0",
  "anthropic>=0.50",
]

[project.scripts]
brendbot = "brendbot.main:main"
