[project]
name = "brendbot"
version = "0.1.0"
description = "A Claude-powered Discord bot in ~300 lines"
requires-python = ">=3.12"
dependencies = [
  "claude-agent-sdk>=0.1.0",
  "discord.py>=2.4",
  "httpx>=0.28",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
# Semantic-retrieval tier for episodes.py (cosine re-rank on stored
# summaries) and classifier_cache.py (semantic cache-hit lookup).
# Optional: brendbot runs without this; installing it unlocks both
# consumers via the shared embedding_model singleton.
embeddings = [
  "sentence-transformers>=2.7",
  "numpy>=1.26",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[project.scripts]
brendbot = "brendbot.main:main"

[tool.pytest.ini_options]
pythonpath = ["."]
