[project]
name = "brendbot"
version = "0.1.0"
description = "A Claude-powered Discord bot with engagement gating, content safety, and episodic memory"
requires-python = ">=3.12"
dependencies = [
  "claude-agent-sdk>=0.1.0",
  "discord.py>=2.4",
  "httpx>=0.28",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
# Semantic-retrieval tier for episodes.py (cosine re-rank on stored
# summaries) and classifier_cache.py (semantic cache-hit lookup).
# Optional: brendbot runs without this; installing it unlocks both
# consumers via the shared embedding_model singleton.
embeddings = [
  "sentence-transformers>=2.7",
  "numpy>=1.26",
]

# Music composition pipeline (PR #26). music21 provides the
# theory-aware constraint layer; pretty_midi is a thin wrapper for
# ABC-to-MIDI realisation. Optional because the bot is fully
# functional without composition; install via `uv sync --extra music`.
music = [
  "music21>=9.1",
  "pretty_midi>=0.2.10",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[project.scripts]
brendbot = "brendbot.main:main"

[tool.pytest.ini_options]
pythonpath = ["."]
